[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "MDa4IFtoolkits"   # The unique name users will type into 'pip install'
version = "0.1.0"
authors = [
    { name="Chanbum Park", email="chanbum.park@ruhr-uni-bochum.de" }
]
description = "MDa4IFtoolkits** (Molecular Dynamics Analysis for Interfacial Systems Toolkits) is an open-source analysis package designed for atomistic simulations featuring interfacial geometries."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.5",
    "scipy>=1.5.3",
    "matplotlib>=3.3.4",
    "mdanalysis>=2.0.0", # (Add any explicit MD parsing dependencies here)
]

[project.urls]
"Homepage" = "https://github.com/cpark1602/MDa4IFtoolkits"
"Bug Tracker" = "https://github.com/cpark1602/MDa4IFtoolkits/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/MDa4IFtoolkits"]

[project.scripts]
mdif-run = "MDa4IFtoolkits.main:main" # Optional terminal execution shortcut

# Add these two lines at the very bottom of the file:
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100  # increase max line length from 88 to 100 characters

[tool.ruff.lint]
#extend-select = ["PTH"]  # also include pydocstyle "D" and pathlib "PTH" rules # "D", 
ignore = ["D107", "D301", "F841"]  # ignore specific rules

#[tool.ruff.pydocstyle]
#convention = "pep257"  # select docstyle convention
